x/programs/rust/sdk_macros/tests/ui/user-defined-context-type.stderr
error[E0308]: mismatched types
 --> tests/ui/user-defined-context-type.rs:5:1
  |
5 | #[public]
  | ^^^^^^^^^ expected `Context`, found `wasmlanche_sdk::Context`
6 | pub fn test(_: Context) {}
  |        ---- arguments to this function are incorrect
  |
  = note: `wasmlanche_sdk::Context` and `Context` have similar names, but are actually distinct types
note: `wasmlanche_sdk::Context` is defined in crate `wasmlanche_sdk`
 --> $WORKSPACE/x/programs/rust/wasmlanche-sdk/src/lib.rs
  |
  | pub struct Context {
  | ^^^^^^^^^^^^^^^^^^
note: `Context` is defined in the current crate
 --> tests/ui/user-defined-context-type.rs:3:1
  |
3 | struct Context;
  | ^^^^^^^^^^^^^^
note: function defined here
 --> tests/ui/user-defined-context-type.rs:6:8
  |
6 | pub fn test(_: Context) {}
  |        ^^^^ ----------
  = note: this error originates in the attribute macro `public` (in Nightly builds, run with -Z macro-backtrace for more info)
