x/programs/rust/sdk_macros/tests/ui/user-defined-context-type.rs
use sdk_macros::public;

struct Context;

#[public]
pub fn test(_: Context) {}

fn main() {}
